# rayromano

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: camera.rs  geometry.rs  main.rs  materials.rs  util.rs
src/geometry/: interval.rs  ray.rs  sphere.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs
