[package]
name = "rayromano"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Williams <alexis@typedr.at>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.83"
buildstructor = "0.5.4"
dyn-clone = "1.0.17"
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
mimalloc = { version = "*", default-features = false }
nalgebra = "0.32.5"
palette = "0.7.6"
rand = "0.8.5"
rayon = "1.10.0"

